<?xml version="1.0"?>
<package>
  <name>dnetwork</name>
  <version>0.0.0</version>
  <description>The dnetwork package</description>
  <maintainer email="mwx@todo.todo">mwx</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>roscpp</buildtool_depend>
  <run_depend>roscpp</run_depend>

  <buildtool_depend>dconfig</buildtool_depend>
  <run_depend>dconfig</run_depend>

  <buildtool_depend>dmsgs</buildtool_depend>
  <run_depend>dmsgs</run_depend>

  <buildtool_depend>dtransmit</buildtool_depend>
  <run_depend>dtransmit</run_depend>

  <buildtool_depend>dprocess</buildtool_depend>
  <run_depend>dprocess</run_depend>

</package>
